IndexTemplateRegistry calls `load` on policy configs